<resources>
    <string name="app_name">LuckyGuy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="radiobutton_hp">首页</string>
    <string name="radiobutton_ci">集团简介</string>
    <string name="radiobutton_si">服务理念</string>
    <string name="radiobutton_cs">集团建制</string>
    <string name="radiobutton_ca">集团优势</string>>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_view">MainView</string>
    <string name="seridea">\u3000成立以来一直秉持「用心服务 用情导游」的理念，服务每一位参加的游客，建立起泰好运的良好口碑。
近二十年来通过精英团队的不懈努力，专业的态度和资深的实力，备受各界好评。使国内同业合作伙伴一提到泰国旅游，就想到「泰好运」；
傲眼的成绩让「泰好运」成为泰国最具规模的旅游综合集团。\n
\u3000专业‧创新‧用心是我们对顾客的承诺，提供最完善的旅游产品。总公司分成各个部门，规划国内外丰富行程，以符合各消费族群的需求。
此外，商务旅游、渡假会议、员工旅游、公司行号奖励旅游，集团也都能量身规划，高质量的保证与亲切服务，满足顾客得到肯定；是我们一直努力不懈的目标。
    </string>
     <string name="ceoinfo">
\u3000少年时期的谭政松先生只身来到泰国打拼，经过不懈努力白手起家。
从事旅游行业30年有余，被称为旅游届的百科全书，从业期间更是培养了众多人才，
如今中国旅游业半数江山大多由谭政松先生所培养之人才统领，所以被圈内人戏称为旅游业的黄埔军校校长。
谭政松先生更是第一批也是第一位进入中国旅游市场从事出境旅游批发业务第一人。\n
\u3000多年的从业经验，丰富的人生阅历成就了今天的泰好运旅运集团，更是由于如此丰富的经验、阅历使集团更能全面的配合国内各个批发商的业务发展需要。
因集团业务发展迅猛，带动了泰国旅游业的飞速发展，谭政松先生更是多次受到泰国总理及王室成员的接见和表彰。
作为泰国旅游业的中流砥柱更有幸进入中国政治中心中南海受到时任国家主席胡锦涛先生的接见并合影。
</string>
     <string name="coinfo">\u3000泰王国好运（兄弟）旅游集团(LUCKY GUY EXPRESS Co.,LTD)成立于2010年10月。
其前身泰王国新国大旅游公司则成立于1993年9月，并于1999年更名泰王国好运旅游公司，2010年添加兄弟2字，正式更名至今。
 泰王国泰好运（兄弟）旅运集团成立于公历1992年，集团总部位于泰国首都曼谷的精华地段，业务遍布中国各个区域，以提供中国旅游者最舒适的旅游接待服务。\n
\u3000泰王国泰好运（兄弟）旅运集团是经泰国国家旅游局批准，专门从事中国旅游团体赴泰旅游接待的大型综合集团，是泰中旅游协会成员、泰中旅游同业协会会员之一。
</string>
    <string name="coadv">\u3000本公司依托集团优势，与泰国境内数百家酒店集团，景区保持密切的协作是我公司得以发展的有力保证；
        年轻、精干、诚实、团结的业务队伍，踏实、谦虚、勤奋、负责的敬业精神是公司得以发展壮大的基础条件和资本。
        我们的座右铭是"以诚信为本，先做人后做事",我们愿真诚为每一位游客提供优质服务。</string>
    <string name="cosys">泰王国好运“兄弟”旅游有限公司\n
泰王国泰中联旅游公司\n
泰王国友佳旅游公司\n
泰好运旅游车辆租借公司
</string>
    <string name="comculone">\u3000自公司成立以来的用心经营，集团才有今日的规模，且在泰国旅游业成为一方霸主。一直以来，我们认定「人」是企业最重要的资产，是使集团不断茁壮的动力。
我们重视对导游的培训，务使每一位泰好运的导游人员都可以提供最专业的服务给顾客，不断地为员工上课，使他们务必了解公司的各项产品，以及市场最新状况，以满足客户的不同需求，解答客户的疑问。
我们提供考察新产品的机会，尽量使他们对于公司的各项旅游产品，都能够「感同身受」，如此才能给我们的客户最好的旅游讲解。"</string>
    <string name="comcultwo">\u3000对于客户，我们希望建立的关系不是「单次生意的往来」，而是永远的朋友，我们相信，唯有客户的再次合作，我们的服务质量才是受到肯定。
集团的目标不在于日渐扩增的规模，我们所做的一切都是为了提供客户更高，质量的更好的服务，游客百分之百的满意度才是我们努力的长期目标。</string>
    <string name="comculth">\u30002015年我和你携手走过不平凡的一年，这一年我们互相扶持，互相帮助，患难与共走过了旅游的寒冬。\n
\u30002016年我和你将携手并进，迎接新的挑战和机遇，共迎旅游的春天。\n
        \u3000\u3000\u3000因为有你，我不会孤单\n
        \u3000\u3000\u3000因为有你，我不会放弃\n
        \u3000\u3000\u3000因为有你，我会更加辉煌\n
        \u3000泰好运旅运集团董事长谭政松携全体员工将成为您泰国旅游最为忠实，最具实力，最具开拓精神的合作伙伴。\n
        \u3000未来，需要您的掌声与肯定，更期待有您的参与，陪「泰好运」走过下一个辉煌世纪！</string>

    <string name="sumbkk">
        曼谷(Bangkok)，是泰国首都和最大城市，别名“天使之城”，位于昭披耶河东岸，南临暹罗湾，中南半岛最大城市，东南亚第二大城市，为泰国政治、经济、贸易、交通、文化、科技、教育、宗教与各方面中心。
在曼谷，著名的景点有很多，其中著名的有大皇宫、黎明寺等。
    </string>
    <string name="grandp">
    大皇宫(Grand Palace)，位于首都曼谷市中心，位于昭被耶河与湄南河交汇之畔，紧偎湄南河，由一组布局错落的建筑群组成，是暹逻式风格，汇集了泰国绘画、雕刻和装饰艺术的精华。
    宫廷建筑以白色为主，四周筑有白色宫墙。宫墙高约5米，总长1900米，主要建筑物有阿玛林宫、节基宫、律实宫和玉佛寺等。此外，由拉玛八世兴建的宝隆皮曼宫，是招待外国元首的宾馆。
        </string>
    <string name="wata">
        黎明寺(Wat Arun)，又称为破晓寺或郑王庙，大概是因为本寺与郑王关系密切的原故。黎明寺的故事得从大城时代开始讲起，正确的建寺年代已不得而知，
        只知道郑王驱逐缅军后，带领部队顺水而下，军船经过寺前时，正好是黎明时分，郑王便令船停于寺前，上岸礼拜，后来郑王登上王位后，就下令重修佛寺，并根据当年情况将寺名改为黎明寺。 预备在湄南河南岸建造王宫，将黎明寺做为王室家庙，西元1778年还移请玉佛到黎明寺供奉。
    </string>
    <string name="sumpat">
        芭提雅(Pattaya)，是中南半岛南端的泰国一处著名海景度假胜地。芭提雅是东南亚近年来热度极高的海滩度假、房产投资、旅游、养老圣地，享有"东方夏威夷"之誉，芭提雅已成为"海滩度假天堂"的代名词。
素以阳光、沙滩、海鲜名扬世界，美丽的海、新奇的乐园、还有最负盛名的人妖表演，缤纷无休的夜文化，吸引着全世界的游客。
    </string>
    <string name="beach">
        元海滩，750米长的海滩，闪闪发光的洁净沙滩以及湛蓝的海水相映衬；你既可享受在清澈湛蓝的水游泳，也可以享受香蕉船、摩托艇等各种水上活动；天海滩因为其宁静休闲深得泰国当地居民的喜爱，
        每逢周末就会有很多泰国家庭带着家眷到这里享受清新的空气、明媚的阳光、清澈的海水，喝个清凉可口的椰青、叫一个手法正宗的技师做个泰式按摩，好不惬意；萨美海滩是另外一个比较长的海滩，
        这里深得欧洲游客的喜欢，在这里经常可以看到金发女郎穿着性感的比基尼泳装、涂抹一身防晒霜或是橄榄油，在沙滩上铺一条大浴巾，毫无顾忌地享受日光浴；而象牙湾由于人迹罕至，所以成了好多情侣恋人的最佳选择。
        兰岛因为其优美的岛屿风光，海滩风光已经成为泰国人以及外国游客来到芭提雅旅游的一个必经之地。
    </string>
    <string name="lby">
        来泰国旅游，无论是自由行或者是跟团，芭提雅蒂芬妮人妖秀，绝对是每个游客必到的一站。蒂芬妮人妖秀是芭提雅最著名的人妖秀场之一。
    </string>
    <string name="sumhkt">
        普吉岛(Phuket)，属于泰王国普吉府管辖，在普吉，一年到头人们似乎都在寻找着各种各样狂欢的理由，众多节日和丰富多彩的夜生活是生活的一部分。
        参与其中，忘记自己过客的身份，享受海岛风情的愉悦和惬意。因此无论单身前往，还是结伴而行，都能在普吉玩得尽兴。
    </string>
    <string name="hktdetail">
        芭东海滩距普吉镇15公里，是普吉岛开发最完善的海滩区。白天的芭东海滩游人众多，吸引着越来越多的游客。喜欢逛街和购物的游客也很喜欢这里，因为在海滩附近有几条布满商店和餐馆的街道。夜晚，度假村、露天酒吧、舞厅、夜总会人来人往，晚上十点后有著名的人妖表演，吸引很多过往的游客。\n
        这里有游泳、太阳浴、香蕉船、帆板、游艇等各种海上活动项目，而这里的海水清澈，水中生物种类繁多，是亚洲地区公认的最优良的潜水地之一。如果游客想要体验一下热闹的夜生活可以到邦(Bangla Road)一带走走。芭东沿海三公里新月型的海滩上遍布旅馆、超级市场、购物中心和各种娱乐设施，吃喝玩乐，样样齐全。
    </string>
    <string name="sumcm">
        清迈(Chiang Mai)，面积20107平方公里，是仅次于该国首都曼谷的泰国第二大城市，是清迈府的首府，也是泰国北部政治、经济、文化的中心，其发达程度仅次于首都曼谷。市内风景秀丽，遍植花草，尤以玫瑰花最为著名，
        有“北国玫瑰”的雅称。清迈的天然环境优美，平均海拔300米，是泰国的高原城市，气候凉爽，是著名的避暑胜地。
        </string>
<string name="cmdetail">
    清迈的丝绸、纺织品等也著称于世，每年都有大批丝绸、纺织品出口，是泰国制造业的重要支柱。清迈产烟叶著名，产量居全国第一。其他有柚木、稻米等。有纺织、碾米、卷烟等厂。矿产有石油、钨、银、锡等。\n
    清迈地处山区，位于海拔300米的高原盆地上，四周群山环抱，清澈的滨河流经该市，气候凉爽，树木葱翠，百花争艳，纬度较高，气候比泰中、泰南凉爽。但清迈地处热带，属热带季风气候，全年温差不大。年平均气温为22℃左右。冬天来泰国，要去曼谷、普吉岛避寒，而夏天来泰国，则必来清迈避暑了。清迈的6-10月刚刚度过热季，雨量增多，经常大雨滂沱，气温略有下降，直至10月下旬，此时空气潮湿，月平均温度维持在20℃～25℃左右。此刻虽然雨水偏多，
    但比之其它绝大多数城市正值“火炉”时分的炎热难熬，清迈却是个凉爽宜人，浪漫美丽的清凉世界！
</string>

      <string name="bussin">\u3000主要从事入境旅游、国内旅游等业务。
        负责招徕、接待港、澳、台同胞及全国各地游客来泰国旅游观光，考察、代办车、船、机票等业务，
        同时可为大型国际、国内会议提供接待及旅游服务。</string>
    <string name="tel">TEL:(66)2-6454025/26/27\n
中国市场负责人：田亮\n
(66)800888296/(86)13811126593\n
FAX:(66)2-02-5385944</string>
    <string name="address">Add:1729 Soi Ladprao 94 (Panjamit) SrivaraRd., Plubpla,Wang Tong lang</string>
    <string name="title_activity_maps">Map</string>


</resources>