<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <RadioButton
            android:id="@+id/rb_hp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/rb_hp_selector"
            android:checked="true"
            android:text="@string/radiobutton_hp"
            style="@style/style_RadioButton"/>
        <RadioButton
            android:id="@+id/rb_ci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/rb_ci_selector"
            android:text="@string/radiobutton_ci"
            style="@style/style_RadioButton"/>
        <RadioButton
            android:id="@+id/rb_si"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/rb_si_selector"
            android:text="@string/radiobutton_si"
            style="@style/style_RadioButton"/>
        <RadioButton
            android:id="@+id/rb_cs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/rb_cs_selector"
            android:text="@string/radiobutton_cs"
            style="@style/style_RadioButton"/>
        <RadioButton
            android:id="@+id/rb_ca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/rb_ca_selector"
            android:text="@string/radiobutton_ca"
            style="@style/style_RadioButton"/>
    </RadioGroup>


    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/radiogroup"
        />
</RelativeLayout>
