<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lenovo.luckyge.activity.ThaiBkkActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollViewbkk"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:id="@+id/bkklayout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/imgViewBkk"
            android:src="@drawable/bkk"
            android:scaleType="fitXY" />
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sumbkk"
            android:textSize="15dp"
            android:lineSpacingExtra="5dp"
            android:padding="25dp"
            android:id="@+id/bkktext" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/imgViewgp"
                android:src="@drawable/grandp"
                android:scaleType="fitXY"
                android:paddingTop="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/grandp"
                android:textSize="15dp"
                android:lineSpacingExtra="5dp"
                android:padding="25dp"
                android:id="@+id/grandptext" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/imgViewwata"
                android:src="@drawable/wata"
                android:scaleType="fitXY"
                android:paddingTop="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/wata"
                android:textSize="15dp"
                android:lineSpacingExtra="5dp"
                android:padding="25dp"
                android:id="@+id/watatext" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
