<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lenovo.luckyge.activity.AboutActivity"
    android:orientation="vertical"
    android:weightSum="1">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.33">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buss"
            android:src="@drawable/combuss"
            android:background="@color/pagegreen"
            android:layout_weight="0.3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bussin"
            android:textSize="15dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:paddingBottom="5dp"
            android:background="@color/pagegreen"
            android:textColor="@color/white"
            android:id="@+id/busstext"
            android:layout_weight="0.55"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.34">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sys"
            android:layout_weight="0.25"
            android:src="@drawable/combuild"
            android:background="@color/pageorange"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cosys"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:background="@color/pageorange"
            android:lineSpacingExtra="3dp"
            android:paddingBottom="5dp"
            android:id="@+id/comsys"
            android:layout_weight="0.6"/>

        <Space
            android:layout_width="20px"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.33"
        android:background="@color/bule">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contact"
            android:src="@drawable/comcontact"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="69dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/tel"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:id="@+id/telphone" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="69dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/address"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:id="@+id/adres" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
